To avoid chat jumping to the left when height is smaller on web had to remove the test for min-height

--- a/src/containers/Chat/style.scss
+++ b/src/containers/Chat/style.scss
@@ -49,7 +49,7 @@
   }
 }
 
-@media only screen and (min-width: 420px) and (min-height: 575px) {
+@media only screen and (min-width: 420px) {
   .RecastApp .RecastAppChat, .CaiApp .CaiAppChat {
     right: 10px;
     bottom: 10px;
